[gd_scene load_steps=10 format=2]

[ext_resource path="res://keycontainer/KeyContainer.gd" type="Script" id=1]
[ext_resource path="res://keycontainer/key_container_body.png" type="Texture" id=2]
[ext_resource path="res://keycontainer/key_container_inducator_red.png" type="Texture" id=3]
[ext_resource path="res://keycontainer/key_container_inducator_green.png" type="Texture" id=4]
[ext_resource path="res://keycontainer/rusty_key.png" type="Texture" id=5]
[ext_resource path="res://keycontainer/key_container_body_cover.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource_name = "animation_green"
length = 1.0
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Sprite_indicator_green:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=2]

length = 1.0
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Sprite_indicator_red:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=3]

resource_name = "animation_cover"
length = 1.0
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, 10 ) ]
}

[node name="KeyContainer" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Body" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="Body" index="0"]

texture = ExtResource( 2 )

[node name="Sprite_indicator_red" type="Sprite" parent="Body/Sprite" index="0"]

position = Vector2( -14.5, -17.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite_indicator_green" type="Sprite" parent="Body/Sprite" index="1"]

visible = false
position = Vector2( -14.5, -17.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -23, -31, 17, -31, 17, -26, 20, -26, 20, -24, 26, -24, 26, 21, 26, 27, 24, 31, 15, 31, 12, 29, -3, 29, -7, 31, -16, 31, -17, 28, -19, 25, -19, 20, -23, 20, -23, 18, -27, 18, -27, -28, -23, -28 )

[node name="AnimationPlayerBody" type="AnimationPlayer" parent="Body" index="2"]

root_node = NodePath("..")
autoplay = "animation_red"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/animation_green = SubResource( 1 )
anims/animation_red = SubResource( 2 )
blend_times = [  ]

[node name="Key" type="Area2D" parent="Body" index="3"]

position = Vector2( 0, -7 )
scale = Vector2( 0.5, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Body/Key" index="0"]

texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body/Key" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -10, -30, 10, -30, 16, -24, 16, -12, 12, -8, 4, -8, 4, 20, 10, 20, 10, 28, -4, 28, -4, -8, -10, -8, -16, -14, -16, -24 )

[node name="Cover" type="StaticBody2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 0, -20 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Cover" index="0"]

position = Vector2( 0, 9 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cover" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -15, -10, 15, -10, 15, -2, 16, -2, 16, -1, 21, -1, 22, 0, 22, 18, 21, 18, 21, 21, 19, 21, 19, 22, 14, 22, 14, 26, 12, 28, -12, 28, -14, 26, -14, 22, -19, 22, -19, 21, -21, 21, -21, 18, -22, 18, -22, 0, -21, -1, -16, -1, -16, -2, -15, -2 )

[node name="AnimationPlayerCover" type="AnimationPlayer" parent="Cover" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/animation_cover = SubResource( 3 )
blend_times = [  ]

[connection signal="body_entered" from="Body" to="." method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="Body/Key" to="." method="_on_Key_body_entered"]

[connection signal="animation_finished" from="Cover/AnimationPlayerCover" to="." method="_on_AnimationPlayerCover_animation_finished"]


